k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  labels: 
    app: go-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      name: go-app
      labels: 
        app: go-app
    spec:
      containers:
      - name: go-app
        image: go-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
